namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-prison-users-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-prison-users-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "HMPPS Prison Users API"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-prison-users-api.git"
    cloud-platform.justice.gov.uk/slack-alert-channel: "hmpps_tech_alerts"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-auth-audit-registers"
    cloud-platform.justice.gov.uk/team-name: "haha-live"
    cloud-platform.justice.gov.uk/service-area: "Foundations"
